fluxcd/apps/base/scribe/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: scribe
  labels:
    routed-gateway: "true"
