fluxcd/apps/base/scribe/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scribe
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: scribe
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-anubis
    ports:
    - port: 8080
      protocol: TCP
